tests/compile_fail/missing_table_arg.rs
use balsaq::table;

#[table]
pub struct Foo {
    pub name: String,
}

fn main() {}
