tests/compile_fail/missing_table_arg.stderr
error: unexpected end of input, expected string literal
 --> tests/compile_fail/missing_table_arg.rs:3:1
  |
3 | #[table]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
